welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:11: error: expected class or object definition
def  colonne(T:Array[Color])={
^Array2:26: error: expected class or object definition
  def remplir():Array[Color]={
  ^Array2:40: error: Unmatched closing brace '}' ignored here
}
^